Fixed layout issue with file list when sections are stacked vertically

--- a/src/scss/ondd.scss
+++ b/src/scss/ondd.scss
@@ -29,6 +29,9 @@ $ondd-cutoff: 786px;
 }
 
 .ondd-file-list {
+  // Basic geometry
+  margin-bottom: 1rem;
+
   li {
     // Typography
     white-space: nowrap;
